// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select2Field render() renders with flat choices 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <SelectControl
      allowClear={false}
      allowEmpty={false}
      choices={
        Array [
          "a",
          "b",
          "c",
        ]
      }
      disabled={false}
      escapeMarkup={true}
      hideErrorMessage={false}
      id="id-fieldName"
      multiple={false}
      name="fieldName"
      placeholder="--"
      required={false}
      value="fieldValue"
    />
  </div>
</div>
`;

exports[`Select2Field render() renders with form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <SelectControl
      allowClear={false}
      allowEmpty={false}
      choices={Array []}
      disabled={false}
      escapeMarkup={true}
      hideErrorMessage={false}
      id="id-fieldName"
      multiple={false}
      name="fieldName"
      placeholder="--"
      required={false}
      value="fieldValue"
    />
  </div>
</div>
`;

exports[`Select2Field render() renders with paired choices 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <SelectControl
      allowClear={false}
      allowEmpty={false}
      choices={
        Array [
          Array [
            "a",
            "abc",
          ],
          Array [
            "b",
            "bcd",
          ],
          Array [
            "c",
            "cde",
          ],
        ]
      }
      disabled={false}
      escapeMarkup={true}
      hideErrorMessage={false}
      id="id-fieldName"
      multiple={false}
      name="fieldName"
      placeholder="--"
      required={false}
      value="fieldValue"
    />
  </div>
</div>
`;

exports[`Select2Field render() renders without form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <SelectControl
      allowClear={false}
      allowEmpty={false}
      choices={Array []}
      disabled={false}
      escapeMarkup={true}
      hideErrorMessage={false}
      id="id-fieldName"
      multiple={false}
      name="fieldName"
      placeholder="--"
      required={false}
      value=""
    />
  </div>
</div>
`;
